# GW2-SCT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_gw2sct.bat  build_gw2sct_zero_version.bat  version.rc.in
.claude/: settings.local.json
.github/workflows/: build.yml
Example/: CMakeLists.txt  build.sh
Example/.github/workflows/: build.yml
Example/cmake/toolchains/: mingw-w64.cmake
Example/src/: autoversion.h.in  autoversion.rc.in
cmake/: GW2SCTVersion.cmake
include/: Common.h  FontManager.h  LanguageDefinitions.h  Message.h  Mumblelink.h  Options.h  OptionsStructures.h  Profiles.h  SCTMain.h  ScrollArea.h  SkillFilterStructures.h  SkillFilterUI.h  SkillIconManager.h  Texture.h  Updater.h  UtfUtils.h  httpclient.h  imgui_sct_widgets.h
languages/english/: lang.json
resources/: resource.h  resources.rc
src/: Common.cpp  ExampleMessageOptions.cpp  FontManager.cpp  Language.cpp  Message.cpp  Mumblelink.cpp  Options.cpp  OptionsStructures.cpp  Profiles.cpp  SCTMain.cpp  ScrollArea.cpp  SkillFilterStructures.cpp  SkillFilterUI.cpp  SkillIconManager.cpp  Texture.cpp  TextureD3D11.cpp  Updater.cpp  autoversion.h.in  autoversion.rc.in  httpclient.cpp  imgui_sct_widgets.cpp  main.cpp
